# vocoder

./: .gitignore  README.md  cabal.project  vocoder.cabal
.github/workflows/: ci.yml
example/: Main.hs
src/: ConduitUtils.hs  Vocoder.hs  VocoderAudio.hs  VocoderConduit.hs
vocoder/: ChangeLog.md  vocoder.cabal
vocoder-audio/: vocoder-audio.cabal
vocoder-audio/example/: Main.hs  VocoderFile.hs
vocoder-audio/src/Vocoder/: Audio.hs
vocoder-conduit/: vocoder-conduit.cabal
vocoder-conduit/benchmarks/: main.hs
vocoder-conduit/example/: Main.hs
vocoder-conduit/src/Vocoder/: Conduit.hs  ConduitUtils.hs
vocoder-conduit/src/Vocoder/Conduit/: Filter.hs  Frames.hs  Utils.hs
vocoder-conduit/test/: main.hs
vocoder-dunai/: LICENSE  vocoder-dunai.cabal
vocoder-dunai/benchmarks/: main.hs
vocoder-dunai/example/: MVarClock.hs  ProcessingTree.hs  VocoderJack.hs  VocoderJackFFI.hs  process.c
vocoder-dunai/src/Vocoder/: Dunai.hs
vocoder-dunai/test/: main.hs
vocoder-rhine/: vocoder-rhine.cabal
vocoder-rhine/example/: MVarClock.hs  VocoderJack.hs
vocoder-rhine/src/Vocoder/: Rhine.hs
vocoder-rhine/test/: main.hs
vocoder/src/: Vocoder.hs
vocoder/src/Vocoder/: Filter.hs  Window.hs
