name:                vocoder-audio
version:             0.1.0.0
homepage:            https://github.com/tilk/vocoder
synopsis:            Phase vocoder for conduit-audio
description:
    This module allows to easily use frequency domain processing on audio
    streams created by @conduit-audio@.
license:             BSD2
license-file:        LICENSE
author:              Marek Materzok
maintainer:          tilk@tilk.eu
-- copyright:
category:            Sound
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules: Vocoder.Audio
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12,
                       vector >= 0.12.1.0 && <0.13,
                       vector-fftw >= 0.1.3.8 && < 0.2,
                       conduit >= 1.3.2 && < 1.4,
                       vocoder >= 0.1.0.0 && < 0.2,
                       vocoder-conduit >= 0.1.0.0 && < 0.2,
                       containers >= 0.6.3.1 && < 0.7,
                       mono-traversable >= 1.0.15.1 && < 1.1,
                       conduit-audio >= 0.2.0.3 && < 0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable example
  main-is:         Main.hs
  hs-source-dirs:  example
  -- other-modules:
  build-depends:       base >=4.11 && <4.12,
                       vector >= 0.12.1.0 && <0.13,
                       conduit >= 1.3.2 && < 1.4,
                       vocoder >= 0.1.0.0 && < 0.2,
                       vocoder-conduit >= 0.1.0.0 && < 0.2,
                       vocoder-audio,
                       hsndfile >= 0.8.0 && < 0.9,
                       conduit-audio >= 0.2.0.3 && < 0.3,
                       conduit-audio-sndfile >= 0.1.2.2 && < 0.2,
                       resourcet >= 1.2.2 && < 1.3,
                       optparse-applicative >= 0.16.0.0 && < 0.17,
                       split >= 0.2.3.4 && < 0.3
  default-language:    Haskell2010
  ghc-options:         -Wall


